# CodingPractice

./: .gitignore  README.md  cppRefresher
CMakePractice/: CMakeLists.txt
CMakePractice/MainLibrary/src/: CMakeLists.txt  hello.cpp
CMakePractice/MathLibrary/src/: calculator.cpp
CMakePractice/src/: hello.cpp  helloConfig.h.in
EDxCourses/HW1/: Transform.cpp  Transform.h
EDxCourses/HW2/: Geometry.h  (+5 more)
LeetCode/: 1-TwoSum  1-TwoSum.cpp  1137-NthTribonacciNumber  1137-NthTribonacciNumber.cpp  13-RomanToInteger  13-RomanToInteger.cpp  14-LongestCommonPrefix  14-LongestCommonPrefix.cpp  198-HouseRobber  198-HouseRobber.cpp  2-AddTwoNumbers  2-AddTwoNumbers.cpp  20-ValidParentheses  20-ValidParentheses.cpp  21-MergeTwoSortedLists  21-MergeTwoSortedLists.cpp  213-HouseRobber2  213-HouseRobber2.cpp  27-RemoveElement  27-RemoveElement.cpp  28-ImplementStrStr  28-ImplementStrStr.cpp  35-SearchInsertPosition  35-SearchInsertPosition.cpp  45-JumpGame2  45-JumpGame2.cpp  509-FibonacciNumber  509-FibonacciNumber.cpp  53-MaximumSubarray  53-MaximumSubarray.cpp  55-JumpGame  55-JumpGame.cpp  58-LengthOfLastWord  58-LengthOfLastWord.cpp  66-PlusOne  66-PlusOne.cpp  70-ClimbingStairs  70-ClimbingStairs.cpp  740-DeleteAndEarn  740-DeleteAndEarn.cpp  (+6 more)
OhSnapItsBeenAMinute/: cppRefresher.cpp  hello  hello.cpp
Python/: BasicGraphics.py  CPU_Analysis.py  CPU_pandas.csv  CPU_temperature_analysis.csv  Linux_Monitor.py  README.txt  StudentPerformance.py  assignment1.py  assignment2.py  helper2.py  matrices.py  pandas_tutorial.py  studentperformance.txt
Random/: ericGoogly  ericGoogly.cpp
(+5 files in other folders)
